// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ap component should render when it is not part of the assignment flow 1`] = `
<SpringBoard>
  <div
    className="college-board-container"
  >
    <div
      className="section-wrapper"
    >
      <div
        className="container college-board-header-container"
      >
        <div
          className="header-left"
        >
          <div
            className="logo-container"
          >
            <img
              alt="College Board logo"
              src="https://assets.quill.org/images/college_board/college-board-logo.svg"
            />
            <div
              className="divider"
            />
            <img
              alt="Quill logo"
              src="https://assets.quill.org/images/logos/quill-logo-green.svg"
            />
          </div>
          <div
            className="header-text-container"
          >
            <h1>
              Official SpringBoard® Writing Practice
            </h1>
            <p>
              Free SpringBoard English writing practice aligned to a variety of skills addressed through SpringBoard Grades 6-8, with immediate feedback for students and progress reports for you. Additional tools for SpringBoard Grades 9-10 and Grades 11-12 as well! Find out more below.
            </p>
            <a
              className="quill-button large primary contained focus-on-light"
              href="https://www.quill.org/account/new"
              rel="noopener noreferrer"
              target="_blank"
            >
              Get started
            </a>
          </div>
        </div>
        <img
          alt="Photograph of a student standing next to some lockers"
          src="https://assets.quill.org/images/college_board/student-near-lockers.png"
        />
      </div>
    </div>
    <div
      className="white-section-wrapper"
    >
      <div
        className="container college-board-activities-section"
      >
        <div
          className="header"
        >
          <img
            alt="Illustration of a pencil drawing a line"
            src="https://assets.quill.org/images/college_board/sentence-writing-pencil.svg"
          />
          <div
            className="text-container"
          >
            <h2>
              Sentence-Level Writing Practice
            </h2>
            <p>
              Identify which sentence-level skills from your students' SpringBoard course need to be practiced with a custom-designed writing skills survey aligned to skills covered in their texts. After students complete a survey, Quill will automatically recommend a series of activity packs for each student based on their needs. Each pack contains four to six activities that each take about 15 minutes to complete and provide scaffolded, sequenced practice on one of the skills addressed in the survey.
            </p>
          </div>
        </div>
        <div
          className="activities-subheader"
        >
          <h2>
            Writing Skills Surveys
          </h2>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <div
              className="activity-header-left-container"
            >
              <p
                className="activity-header springboard-sub-header"
                id="writing-skills-survey-1"
              >
                SpringBoard Writing Skills Survey
              </p>
              <div
                className="college-board-activity-tag"
              >
                For SpringBoard 6-8
              </div>
            </div>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/assign/featured-activity-packs/253"
              rel="noopener noreferrer"
              target="_blank"
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a twenty-five-item survey to gauge their understanding of key writing skills, fundamental grammatical elements, common editing mistakes, and compound/complex sentence constructions. The skills addressed in this survey are aligned to the grammar instruction featured in the SpringBoard Language and Writer’s Craft and Language Checkpoint lesson components. 
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Subject-verb agreement; pronoun-antecedent agreement; compound subjects, objects and predicates; coordinating conjunctions in compound sentences; subordinating conjunctions; prepositional phrases; verb tense; subject and object pronouns; commonly confused words
            </p>
          </div>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <div
              className="activity-header-left-container"
            >
              <p
                className="activity-header springboard-sub-header"
                id="writing-skills-survey-1"
              >
                Pre-AP Writing Skills Survey 1: Basic of Sentence Patterns
              </p>
              <div
                className="college-board-activity-tag"
              >
                For SpringBoard 9-10
              </div>
            </div>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/assign/featured-activity-packs/194?college-board=pre-ap"
              rel="noopener noreferrer"
              target="_blank"
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a twelve-item survey to gauge their understanding of key writing skills, fundamental grammatical elements, and compound/complex sentence constructions. The skills addressed in this survey are aligned to the Pre-AP English High School Course Framework for English 1 and English 2. 
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Subject-verb agreement; pronoun-antecedent agreement; compound subjects, objects and predicates; coordinating conjunctions in compound sentences; subordinating conjunctions
            </p>
          </div>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <div
              className="activity-header-left-container"
            >
              <p
                className="activity-header springboard-sub-header"
                id="writing-skills-survey-2"
              >
                Pre-AP Writing Skills Survey 2: Tools for Sentence Expansion
              </p>
              <div
                className="college-board-activity-tag"
              >
                For SpringBoard 9-10
              </div>
            </div>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/assign/featured-activity-packs/195?college-board=pre-ap"
              rel="noopener noreferrer"
              target="_blank"
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a twelve-item survey to gauge their understanding of key writing skills, focusing on constructions for expanding sentences with description and detail. The skills addressed in this survey are aligned to the Pre-AP English High School Course Framework for English 1 and English 2.
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Conjunctive adverbs; appositive phrases; relative clauses; participial phrases; parallel structure
            </p>
          </div>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <div
              className="activity-header-left-container"
            >
              <p
                className="activity-header springboard-sub-header"
                id="writing-skills-survey"
              >
                AP Writing Skills Survey
              </p>
              <div
                className="college-board-activity-tag"
              >
                For SpringBoard 11-12
              </div>
            </div>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/assign/featured-activity-packs/193?college-board=ap"
              rel="noopener noreferrer"
              target="_blank"
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a seventeen-item survey to gauge their understanding of key writing skills that are essential to successful AP- and SAT-level writing.
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Complex Sentences; relative clauses; appositive phrases; participial phrases; parallel structure; compound-complex sentences; advanced combining
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="white-section-wrapper"
      id="info-blurbs-1-wrapper"
    >
      <div
        className="container info-blurbs-section"
      >
        <div
          className="info-blurb-container"
        >
          <img
            alt="A list of writing concepts: Subject-Verb Agreement, Pronoun-Antecedent Agreement, Compound Subjects, Objects, Predicates, and more."
            src="https://assets.quill.org/images/college_board/pre-ap-recommendations.svg"
          />
          <div
            className="text-container"
          >
            <p
              className="info-blurb-header"
            >
              Personalized Recommendations
            </p>
            <p
              className="info-blurb-text"
            >
              After your students complete a SpringBoard 6-8, Pre-AP, AP, or ELL writing skills survey, Quill will use the results to recommend a set of independent practice activities. You can choose to assign all the practice at once, or you can pick and choose the activities that best fit your instructional and students’ needs. As students complete the practice, they’ll receive instant feedback on their writing that guides them through the revising and editing process.
            </p>
          </div>
        </div>
        <div
          className="info-blurb-container"
        >
          <div
            className="text-container"
          >
            <p
              className="info-blurb-header"
            >
              Writing with Targeted Feedback
            </p>
            <p
              className="info-blurb-text"
            >
              Students receive immediate feedback that guides them through the revision process, pushing them to think critically about their writing and make revisions that ultimately lead to strong, sophisticated, and grammatically accurate sentences. The feedback inspires students to strengthen their sentence structure, but also supports them in editing for mechanics such as punctuation and spelling.
            </p>
          </div>
          <img
            alt="A recommended activity pack report showing four students being recommended a mixture of activities for relative clauses and parallel structure."
            src="https://assets.quill.org/images/college_board/pre-ap-additional-practice.svg"
          />
        </div>
        <div
          className="info-blurb-container"
        >
          <img
            alt="An illustration showing a student combining two sentences, getting feedback from Quill, and then getting a correct response."
            src="https://assets.quill.org/images/college_board/springboard-reports.svg"
          />
          <div
            className="text-container"
          >
            <p
              className="info-blurb-header"
            >
              Data Reports
            </p>
            <p
              className="info-blurb-text"
            >
              You can monitor the progress of your students and continue to identify areas of need and areas of strength through multiple data reports. Use the analysis report to review your students' work sentence-by-sentence, or use the summary report to get a high-level sense of where your students could use some extra support.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="white-section-wrapper"
    >
      <div
        className="container college-board-activities-section"
      >
        <div
          className="header"
        >
          <img
            alt="Illustration of a pencil drawing a line"
            src="https://assets.quill.org/images/college_board/english-language-learners-globe.svg"
          />
          <div
            className="text-container"
          >
            <h2>
              Additional Support for ELL Students
            </h2>
            <p>
              In addition to the above writing skills surveys, Quill.org also offers dedicated skills surveys for English Language Learners (ELLs). There are two separate skills surveys: one for students in WIDA's Entering and Emerging stages of language proficiency, and one for students in WIDA's Developing and Expanding stages.
            </p>
          </div>
        </div>
        <div
          className="activities-subheader"
        >
          <h2
            id="ell-header"
          >
            ELL Skills Surveys
          </h2>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <div
              className="activity-header-left-container"
            >
              <p
                className="activity-header springboard-sub-header"
                id="writing-skills-survey-1"
              >
                ELL Skills Survey 1: Entering and Emerging
              </p>
              <div
                className="college-board-activity-tag"
              >
                For SpringBoard 6-12
              </div>
            </div>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/assign/featured-activity-packs/154"
              rel="noopener noreferrer"
              target="_blank"
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a twenty-two-item placement activity. Directions can be shown in English only, or shown in both English and another selected language.
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Simple verb conjugation; articles; subject-verb agreement; simple word order; singular and plural nouns; adjective placement
            </p>
          </div>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <div
              className="activity-header-left-container"
            >
              <p
                className="activity-header springboard-sub-header"
                id="writing-skills-survey-1"
              >
                ELL Skills Survey 2: Developing and Expanding
              </p>
              <div
                className="college-board-activity-tag"
              >
                For SpringBoard 6-12
              </div>
            </div>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/assign/featured-activity-packs/34"
              rel="noopener noreferrer"
              target="_blank"
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a twenty-two-item placement activity. Directions can be shown in English only, or shown in both English and another selected language.
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Fragments; articles; verb tense; adjectives; adverbs; prepositions; compound subjects, objects, and predicates; compound sentences; complex sentences
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="section-wrapper"
    >
      <div
        className="container cb-message-container"
      >
        <p
          className="cb-message-header"
        >
          Quill and College Board have partnered to provide students with meaningful practice of their sentence-level writing skills.
        </p>
        <div
          className="sub-header-container"
        >
          <p
            className="cb-message-sub-header"
          >
            Message from College Board
          </p>
        </div>
        <div
          className="quote-container"
        >
          <img
            alt="Large right quote"
            id="first-quote"
            src="https://assets.quill.org/images/college_board/exaggerated-quote-left.svg"
          />
          <div
            className="inner-text-container"
          >
            <p>
              Teaching writing is hard. Even harder can be attempting to pinpoint exactly when we learned how and why to write clearly. That’s why the College Board has worked with Quill.org to ensure that this new, free, comprehensive offering helps students practice targeted sentence construction skills in their writing. Sustained practice and exposure to targeted skills is important to improvement and comfort.
            </p>
            <p>
              Teaching writing may always be hard, but student practice in meaningful skills can make the learning that much clearer. Through this practice, students can begin to own the how and why of their writing.
            </p>
          </div>
          <img
            alt="Large left quote"
            id="second-quote"
            src="https://assets.quill.org/images/college_board/exaggerated-quote-right.svg"
          />
        </div>
      </div>
    </div>
    <QuestionsAndAnswers
      questionsAndAnswersFile="springboard"
      supportLink=""
    >
      <div
        id="q-and-a"
      >
        <div
          className="q-and-a-inner-wrapper"
        >
          <h1>
            Questions and Answers
          </h1>
          <QuestionAndAnswer
            key="0"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Quill is a writing tool that provides over 600 writing, grammar, and proofreading activities designed to engage students in the writing process. Quill provides practice in many areas of sentence writing, from comma placement and subject-verb agreement to the use of conjunctions to convey complex relationships between ideas. In the Quill Connect tool, students practice writing different types of sentences using the evidence-based strategy of sentence combining. Students receive specific, targeted feedback on their writing that they can use to revise their work. Through these activities, students practice writing a variety of sophisticated sentences and practice conveying complex ideas in clear, succinct, and grammatically strong ways. Most activities are designed to be completed in 10-15 minutes so that you have the freedom to use them in the way that works best for your classroom.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    As part of the customized offering for SpringBoard, there are a variety of writing skills surveys to be used, depending on the context of your classes and students. The skills featured as part of each survey are derived directly from the elements of grammar called out by course texts and frameworks.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    You can use these skills surveys during the course to assess your students’ needs and to generate a sequence of recommended activities that provides targeted writing practice on the skills addressed instructionally. In each of these recommended practice activities, students receive immediate feedback on their writing that they can use to revise their responses up to five times. Through these rounds of feedback and revision, students practice key writing skills.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    In addition to the skills surveys and recommended practice activities, there are also sentence combining activities aligned to texts that appear in the instructional materials of both the Pre-AP English I course Grade 9 SpringBoard English Language Arts: English I. These activities provide additional opportunities for students to practice their writing in context, combining sentences with a variety of skills and approaches that explore key ideas and themes from these texts.
                  </p>
                </div>,
                "question": "What is Quill.org?",
              }
            }
            questionsAndAnswersFile="springboard"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What is Quill.org?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="1"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Based on what is recommended above, you can assign the relevant writing skills surveys to your students. However, the contexts of each individual classroom are unique, so those specific details should inform your decision about which survey is best to assign. In review of the description of each survey, you’ll see what skills are covered on each. Therefore, you may find that while a certain survey is recommended for your students’ grade level, the skills featured on a different survey would be most appropriate. Additionally, multiple skills surveys can be assigned to your students, and at various points in the school year.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    The writing skills surveys can be completed at any point in the school year. For example the “SpringBoard 6-8 — SpringBoard Writing Skills Survey” is reflective of skills that are addressed in-lesson across three grade level texts and their respective units. Therefore, the best time to assign this survey will be best determined by a teacher depending on students’ mastery of these skills as evidenced by their writing tasks. Some teachers may decide to assign a writing skills survey at the beginning of the school year, while others may wait to see additional writing evidence from students before assigning.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Quill’s ELL writing skills surveys are also provided above since they feature a survey of skills that are appropriate for learners who may be relatively new to the English language. These surveys function the same as the other Quill surveys, but with a focus that addresses more foundational elements of sentence-level writing practice. As with all surveys, you can determine what surveys would be appropriate for your students, and at which point in the school year. While surveys may feature overlapping skills. Students can be assigned multiple surveys and later be recommended appropriate practice that teachers can assign to them.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    The practice that is recommended to students as a result of a completed writing skills survey can be completed by students in the way that is best aligned to your schedule and instructional content. While it is recommended that the writing skills surveys be completed in class, the resulting practice can be completed by students independently and at their own pace. Once the recommended practice has been assigned to students, teachers may choose to use it as a classroom “Do Now” activity, an independent practice task if students complete classwork early, or as homework assignments. 
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Since SpringBoard’s Language and Writer’s Craft elements of activities feature focused practice on specific grammatical skills, you may find that there are aligned materials through Quill Lessons that can become part of your instruction. Quill Lessons enable you to lead whole-class and small group writing instruction. Teachers control interactive slides that contain writing prompts, and the entire class responds to each prompt. Each Quill Lessons activity provides a lesson plan, writing prompts, discussion topics, and a follow up independent practice activity.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Of course, this customized offering for SpringBoard has been designed to empower you to make the best decisions for your classroom and your students. Knowledge of your students’ needs will assist you in making appropriate decisions.
                  </p>
                </div>,
                "question": "How should SpringBoard teachers use Quill.org?",
              }
            }
            questionsAndAnswersFile="springboard"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  How should SpringBoard teachers use Quill.org?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="2"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    It is recommended that you and your students create free accounts on Quill.org. Creating an account will give you access to the two skills surveys and recommended practice; creating an account also allows you to track your students’ progress and view data reports. You can create an account by visiting the Quill 
                    <a
                      href="https://www.quill.org/sign-up/teacher"
                    >
                      sign-up page
                    </a>
                    .
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Please note that if you do not create an account, you will not be able to use the skills surveys, access the recommended skills practice, track student progress, or view data reports.
                  </p>
                </div>,
                "question": "Do I need to create an account on Quill.org?",
              }
            }
            questionsAndAnswersFile="springboard"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Do I need to create an account on Quill.org?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="3"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    The skills surveys function similarly to the Quill Diagnostic tool. The activities linked throughout the English 1 lessons and the activities that are recommended based on the students’ skills survey results will be from the Quill Connect sentence combining tool. If you decide to create a free account on Quill.org, you will be able to assign additional activities from any of the five tools listed below.
                  </p>
                  <ul>
                    <li>
                      <p>
                        Quill Connect
                      </p>
                      <p
                        className="college-board-q-and-a-text"
                      >
                        Students combine multiple ideas into a single sentence using the evidence-based strategy of sentence combining. Students then receive instant feedback designed to help them improve the clarity and precision of their sentences while also reinforcing accurate usage and mechanics.
                      </p>
                    </li>
                    <li>
                      <p>
                        Quill Grammar
                      </p>
                      <p
                        className="college-board-q-and-a-text"
                      >
                        Students practice basic grammar skills, from using correct capitalization to recognizing and correcting commonly confused words.
                      </p>
                    </li>
                    <li>
                      <p>
                        Quill Proofreader
                      </p>
                      <p
                        className="college-board-q-and-a-text"
                      >
                        Students practice their editing skills by proofreading passages embedded with errors. Students receive personalized follow-up activities based on their results.
                      </p>
                    </li>
                    <li>
                      <p>
                        Quill Lessons
                      </p>
                      <p
                        className="college-board-q-and-a-text"
                      >
                        Teachers lead whole-class writing instruction with complete lesson plans and activities. Teachers control interactive slides that contain a mini lesson and guided practice. Teachers can model writing strategies in real-time, present prompts to which students can respond on their own devices, and then anonymously display student responses for discussion. Each Quill Lessons activity provides a lesson plan, writing prompts, discussion topics, and a follow-up independent practice activity. Teachers can also customize any lesson by adding their own prompts and examples.
                      </p>
                    </li>
                    <li>
                      <p>
                        Quill Diagnostic
                      </p>
                      <p
                        className="college-board-q-and-a-text"
                      >
                        Students complete an activity designed to help teachers quickly determine which skills students need to work on. After students complete a Quill Diagnostic activity, Quill recommends a set of writing activities for students based on their results. Teachers can easily view and assign the recommended sequence of activities and track their students’ progress. As mentioned above, the skills surveys have been developed as customized tools based on the Pre-AP English High School Course Framework. Therefore, the skills surveys can be used in lieu of the general Quill Diagnostic activities.
                      </p>
                    </li>
                  </ul>
                </div>,
                "question": "What tools does Quill.org offer?",
              }
            }
            questionsAndAnswersFile="springboard"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What tools does Quill.org offer?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="4"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Visit our teacher center for additional resources and more information about how to use Quill: 
                    <a
                      className="focus-on-light"
                      href="https://www.quill.org/teacher-center"
                    >
                      https://www.quill.org/teacher-center
                    </a>
                    . You can also reach out to either one of your Quill representatives via email. We're always happy to help!
                  </p>
                  <p
                    className="college-board-block"
                  >
                    Quill Representatives:
                  </p>
                  <div
                    className="college-board-block"
                  >
                    <p>
                      Christina Collins-Berry
                    </p>
                    <p>
                      Managing Director of Partnerships
                    </p>
                    <p>
                      christina@quill.org
                    </p>
                  </div>
                  <div
                    className="college-board-block"
                  >
                    <p>
                      Sherry Lewkowicz
                    </p>
                    <p>
                      Senior Instructional Coach
                    </p>
                    <p>
                      sherry@quill.org
                    </p>
                  </div>
                  <p
                    className="college-board-block"
                  >
                    Quill Support: support@quill.org (include your current Pre-AP teacher status in email)
                  </p>
                  <p
                    className="college-board-block"
                  >
                    Quill phone number: (510) 671-0222
                  </p>
                  <p
                    className="college-board-block"
                  >
                    Quill Support Chat: While you’re on Quill.org, you can use the chat bubble in the lower right side of your screen to connect with a member of the Quill support team. Be sure to mention that you’re a Pre-AP teacher when you reach out using this method.
                  </p>
                </div>,
                "question": "What if I have a question about Quill.org? ",
              }
            }
            questionsAndAnswersFile="springboard"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What if I have a question about Quill.org? 
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <a
            className="support-link hidden"
            href=""
          >
            View all questions and answers
          </a>
        </div>
      </div>
    </QuestionsAndAnswers>
  </div>
</SpringBoard>
`;

exports[`Ap component should render when it is part of the assignment flow 1`] = `
<SpringBoard
  isPartOfAssignmentFlow={true}
>
  <div
    className="college-board-container"
  >
    <div
      className="section-wrapper"
    >
      <div
        className="container college-board-header-container"
      >
        <div
          className="header-left"
        >
          <div
            className="logo-container"
          >
            <img
              alt="College Board logo"
              src="https://assets.quill.org/images/college_board/college-board-logo.svg"
            />
            <div
              className="divider"
            />
            <img
              alt="Quill logo"
              src="https://assets.quill.org/images/logos/quill-logo-green.svg"
            />
          </div>
          <div
            className="header-text-container"
          >
            <h1>
              Official SpringBoard® Writing Practice
            </h1>
            <p>
              Free SpringBoard English writing practice aligned to a variety of skills addressed through SpringBoard Grades 6-8, with immediate feedback for students and progress reports for you. Additional tools for SpringBoard Grades 9-10 and Grades 11-12 as well! Find out more below.
            </p>
            <a
              className="quill-button large primary contained focus-on-light"
              href="https://www.quill.org/account/new"
              rel="noopener noreferrer"
              target="_blank"
            >
              Get started
            </a>
          </div>
        </div>
        <img
          alt="Photograph of a student standing next to some lockers"
          src="https://assets.quill.org/images/college_board/student-near-lockers.png"
        />
      </div>
    </div>
    <div
      className="white-section-wrapper"
    >
      <div
        className="container college-board-activities-section"
      >
        <div
          className="header"
        >
          <img
            alt="Illustration of a pencil drawing a line"
            src="https://assets.quill.org/images/college_board/sentence-writing-pencil.svg"
          />
          <div
            className="text-container"
          >
            <h2>
              Sentence-Level Writing Practice
            </h2>
            <p>
              Identify which sentence-level skills from your students' SpringBoard course need to be practiced with a custom-designed writing skills survey aligned to skills covered in their texts. After students complete a survey, Quill will automatically recommend a series of activity packs for each student based on their needs. Each pack contains four to six activities that each take about 15 minutes to complete and provide scaffolded, sequenced practice on one of the skills addressed in the survey.
            </p>
          </div>
        </div>
        <div
          className="activities-subheader"
        >
          <h2>
            Writing Skills Surveys
          </h2>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <div
              className="activity-header-left-container"
            >
              <p
                className="activity-header springboard-sub-header"
                id="writing-skills-survey-1"
              >
                SpringBoard Writing Skills Survey
              </p>
              <div
                className="college-board-activity-tag"
              >
                For SpringBoard 6-8
              </div>
            </div>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/assign/featured-activity-packs/253"
              rel="noopener noreferrer"
              target=""
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a twenty-five-item survey to gauge their understanding of key writing skills, fundamental grammatical elements, common editing mistakes, and compound/complex sentence constructions. The skills addressed in this survey are aligned to the grammar instruction featured in the SpringBoard Language and Writer’s Craft and Language Checkpoint lesson components. 
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Subject-verb agreement; pronoun-antecedent agreement; compound subjects, objects and predicates; coordinating conjunctions in compound sentences; subordinating conjunctions; prepositional phrases; verb tense; subject and object pronouns; commonly confused words
            </p>
          </div>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <div
              className="activity-header-left-container"
            >
              <p
                className="activity-header springboard-sub-header"
                id="writing-skills-survey-1"
              >
                Pre-AP Writing Skills Survey 1: Basic of Sentence Patterns
              </p>
              <div
                className="college-board-activity-tag"
              >
                For SpringBoard 9-10
              </div>
            </div>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/assign/featured-activity-packs/194?college-board=pre-ap"
              rel="noopener noreferrer"
              target=""
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a twelve-item survey to gauge their understanding of key writing skills, fundamental grammatical elements, and compound/complex sentence constructions. The skills addressed in this survey are aligned to the Pre-AP English High School Course Framework for English 1 and English 2. 
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Subject-verb agreement; pronoun-antecedent agreement; compound subjects, objects and predicates; coordinating conjunctions in compound sentences; subordinating conjunctions
            </p>
          </div>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <div
              className="activity-header-left-container"
            >
              <p
                className="activity-header springboard-sub-header"
                id="writing-skills-survey-2"
              >
                Pre-AP Writing Skills Survey 2: Tools for Sentence Expansion
              </p>
              <div
                className="college-board-activity-tag"
              >
                For SpringBoard 9-10
              </div>
            </div>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/assign/featured-activity-packs/195?college-board=pre-ap"
              rel="noopener noreferrer"
              target=""
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a twelve-item survey to gauge their understanding of key writing skills, focusing on constructions for expanding sentences with description and detail. The skills addressed in this survey are aligned to the Pre-AP English High School Course Framework for English 1 and English 2.
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Conjunctive adverbs; appositive phrases; relative clauses; participial phrases; parallel structure
            </p>
          </div>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <div
              className="activity-header-left-container"
            >
              <p
                className="activity-header springboard-sub-header"
                id="writing-skills-survey"
              >
                AP Writing Skills Survey
              </p>
              <div
                className="college-board-activity-tag"
              >
                For SpringBoard 11-12
              </div>
            </div>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/assign/featured-activity-packs/193?college-board=ap"
              rel="noopener noreferrer"
              target=""
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a seventeen-item survey to gauge their understanding of key writing skills that are essential to successful AP- and SAT-level writing.
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Complex Sentences; relative clauses; appositive phrases; participial phrases; parallel structure; compound-complex sentences; advanced combining
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="white-section-wrapper"
      id="info-blurbs-1-wrapper"
    >
      <div
        className="container info-blurbs-section"
      >
        <div
          className="info-blurb-container"
        >
          <img
            alt="A list of writing concepts: Subject-Verb Agreement, Pronoun-Antecedent Agreement, Compound Subjects, Objects, Predicates, and more."
            src="https://assets.quill.org/images/college_board/pre-ap-recommendations.svg"
          />
          <div
            className="text-container"
          >
            <p
              className="info-blurb-header"
            >
              Personalized Recommendations
            </p>
            <p
              className="info-blurb-text"
            >
              After your students complete a SpringBoard 6-8, Pre-AP, AP, or ELL writing skills survey, Quill will use the results to recommend a set of independent practice activities. You can choose to assign all the practice at once, or you can pick and choose the activities that best fit your instructional and students’ needs. As students complete the practice, they’ll receive instant feedback on their writing that guides them through the revising and editing process.
            </p>
          </div>
        </div>
        <div
          className="info-blurb-container"
        >
          <div
            className="text-container"
          >
            <p
              className="info-blurb-header"
            >
              Writing with Targeted Feedback
            </p>
            <p
              className="info-blurb-text"
            >
              Students receive immediate feedback that guides them through the revision process, pushing them to think critically about their writing and make revisions that ultimately lead to strong, sophisticated, and grammatically accurate sentences. The feedback inspires students to strengthen their sentence structure, but also supports them in editing for mechanics such as punctuation and spelling.
            </p>
          </div>
          <img
            alt="A recommended activity pack report showing four students being recommended a mixture of activities for relative clauses and parallel structure."
            src="https://assets.quill.org/images/college_board/pre-ap-additional-practice.svg"
          />
        </div>
        <div
          className="info-blurb-container"
        >
          <img
            alt="An illustration showing a student combining two sentences, getting feedback from Quill, and then getting a correct response."
            src="https://assets.quill.org/images/college_board/springboard-reports.svg"
          />
          <div
            className="text-container"
          >
            <p
              className="info-blurb-header"
            >
              Data Reports
            </p>
            <p
              className="info-blurb-text"
            >
              You can monitor the progress of your students and continue to identify areas of need and areas of strength through multiple data reports. Use the analysis report to review your students' work sentence-by-sentence, or use the summary report to get a high-level sense of where your students could use some extra support.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="white-section-wrapper"
    >
      <div
        className="container college-board-activities-section"
      >
        <div
          className="header"
        >
          <img
            alt="Illustration of a pencil drawing a line"
            src="https://assets.quill.org/images/college_board/english-language-learners-globe.svg"
          />
          <div
            className="text-container"
          >
            <h2>
              Additional Support for ELL Students
            </h2>
            <p>
              In addition to the above writing skills surveys, Quill.org also offers dedicated skills surveys for English Language Learners (ELLs). There are two separate skills surveys: one for students in WIDA's Entering and Emerging stages of language proficiency, and one for students in WIDA's Developing and Expanding stages.
            </p>
          </div>
        </div>
        <div
          className="activities-subheader"
        >
          <h2
            id="ell-header"
          >
            ELL Skills Surveys
          </h2>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <div
              className="activity-header-left-container"
            >
              <p
                className="activity-header springboard-sub-header"
                id="writing-skills-survey-1"
              >
                ELL Skills Survey 1: Entering and Emerging
              </p>
              <div
                className="college-board-activity-tag"
              >
                For SpringBoard 6-12
              </div>
            </div>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/assign/featured-activity-packs/154"
              rel="noopener noreferrer"
              target=""
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a twenty-two-item placement activity. Directions can be shown in English only, or shown in both English and another selected language.
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Simple verb conjugation; articles; subject-verb agreement; simple word order; singular and plural nouns; adjective placement
            </p>
          </div>
        </div>
        <div
          className="activity-container"
        >
          <div
            className="activity-header-container"
          >
            <div
              className="activity-header-left-container"
            >
              <p
                className="activity-header springboard-sub-header"
                id="writing-skills-survey-1"
              >
                ELL Skills Survey 2: Developing and Expanding
              </p>
              <div
                className="college-board-activity-tag"
              >
                For SpringBoard 6-12
              </div>
            </div>
            <a
              className="quill-button medium primary outlined view-button focus-on-light"
              href="/assign/featured-activity-packs/34"
              rel="noopener noreferrer"
              target=""
            >
              View
            </a>
          </div>
          <div
            className="activity-text-container"
          >
            <p
              className="activity-sub-text"
            >
              Students complete a twenty-two-item placement activity. Directions can be shown in English only, or shown in both English and another selected language.
            </p>
            <p
              className="activity-sub-header"
            >
              Skills
            </p>
            <p
              className="activity-sub-text"
            >
              Fragments; articles; verb tense; adjectives; adverbs; prepositions; compound subjects, objects, and predicates; compound sentences; complex sentences
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="section-wrapper"
    >
      <div
        className="container cb-message-container"
      >
        <p
          className="cb-message-header"
        >
          Quill and College Board have partnered to provide students with meaningful practice of their sentence-level writing skills.
        </p>
        <div
          className="sub-header-container"
        >
          <p
            className="cb-message-sub-header"
          >
            Message from College Board
          </p>
        </div>
        <div
          className="quote-container"
        >
          <img
            alt="Large right quote"
            id="first-quote"
            src="https://assets.quill.org/images/college_board/exaggerated-quote-left.svg"
          />
          <div
            className="inner-text-container"
          >
            <p>
              Teaching writing is hard. Even harder can be attempting to pinpoint exactly when we learned how and why to write clearly. That’s why the College Board has worked with Quill.org to ensure that this new, free, comprehensive offering helps students practice targeted sentence construction skills in their writing. Sustained practice and exposure to targeted skills is important to improvement and comfort.
            </p>
            <p>
              Teaching writing may always be hard, but student practice in meaningful skills can make the learning that much clearer. Through this practice, students can begin to own the how and why of their writing.
            </p>
          </div>
          <img
            alt="Large left quote"
            id="second-quote"
            src="https://assets.quill.org/images/college_board/exaggerated-quote-right.svg"
          />
        </div>
      </div>
    </div>
    <QuestionsAndAnswers
      questionsAndAnswersFile="springboard"
      supportLink=""
    >
      <div
        id="q-and-a"
      >
        <div
          className="q-and-a-inner-wrapper"
        >
          <h1>
            Questions and Answers
          </h1>
          <QuestionAndAnswer
            key="0"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Quill is a writing tool that provides over 600 writing, grammar, and proofreading activities designed to engage students in the writing process. Quill provides practice in many areas of sentence writing, from comma placement and subject-verb agreement to the use of conjunctions to convey complex relationships between ideas. In the Quill Connect tool, students practice writing different types of sentences using the evidence-based strategy of sentence combining. Students receive specific, targeted feedback on their writing that they can use to revise their work. Through these activities, students practice writing a variety of sophisticated sentences and practice conveying complex ideas in clear, succinct, and grammatically strong ways. Most activities are designed to be completed in 10-15 minutes so that you have the freedom to use them in the way that works best for your classroom.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    As part of the customized offering for SpringBoard, there are a variety of writing skills surveys to be used, depending on the context of your classes and students. The skills featured as part of each survey are derived directly from the elements of grammar called out by course texts and frameworks.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    You can use these skills surveys during the course to assess your students’ needs and to generate a sequence of recommended activities that provides targeted writing practice on the skills addressed instructionally. In each of these recommended practice activities, students receive immediate feedback on their writing that they can use to revise their responses up to five times. Through these rounds of feedback and revision, students practice key writing skills.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    In addition to the skills surveys and recommended practice activities, there are also sentence combining activities aligned to texts that appear in the instructional materials of both the Pre-AP English I course Grade 9 SpringBoard English Language Arts: English I. These activities provide additional opportunities for students to practice their writing in context, combining sentences with a variety of skills and approaches that explore key ideas and themes from these texts.
                  </p>
                </div>,
                "question": "What is Quill.org?",
              }
            }
            questionsAndAnswersFile="springboard"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What is Quill.org?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="1"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Based on what is recommended above, you can assign the relevant writing skills surveys to your students. However, the contexts of each individual classroom are unique, so those specific details should inform your decision about which survey is best to assign. In review of the description of each survey, you’ll see what skills are covered on each. Therefore, you may find that while a certain survey is recommended for your students’ grade level, the skills featured on a different survey would be most appropriate. Additionally, multiple skills surveys can be assigned to your students, and at various points in the school year.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    The writing skills surveys can be completed at any point in the school year. For example the “SpringBoard 6-8 — SpringBoard Writing Skills Survey” is reflective of skills that are addressed in-lesson across three grade level texts and their respective units. Therefore, the best time to assign this survey will be best determined by a teacher depending on students’ mastery of these skills as evidenced by their writing tasks. Some teachers may decide to assign a writing skills survey at the beginning of the school year, while others may wait to see additional writing evidence from students before assigning.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Quill’s ELL writing skills surveys are also provided above since they feature a survey of skills that are appropriate for learners who may be relatively new to the English language. These surveys function the same as the other Quill surveys, but with a focus that addresses more foundational elements of sentence-level writing practice. As with all surveys, you can determine what surveys would be appropriate for your students, and at which point in the school year. While surveys may feature overlapping skills. Students can be assigned multiple surveys and later be recommended appropriate practice that teachers can assign to them.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    The practice that is recommended to students as a result of a completed writing skills survey can be completed by students in the way that is best aligned to your schedule and instructional content. While it is recommended that the writing skills surveys be completed in class, the resulting practice can be completed by students independently and at their own pace. Once the recommended practice has been assigned to students, teachers may choose to use it as a classroom “Do Now” activity, an independent practice task if students complete classwork early, or as homework assignments. 
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Since SpringBoard’s Language and Writer’s Craft elements of activities feature focused practice on specific grammatical skills, you may find that there are aligned materials through Quill Lessons that can become part of your instruction. Quill Lessons enable you to lead whole-class and small group writing instruction. Teachers control interactive slides that contain writing prompts, and the entire class responds to each prompt. Each Quill Lessons activity provides a lesson plan, writing prompts, discussion topics, and a follow up independent practice activity.
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Of course, this customized offering for SpringBoard has been designed to empower you to make the best decisions for your classroom and your students. Knowledge of your students’ needs will assist you in making appropriate decisions.
                  </p>
                </div>,
                "question": "How should SpringBoard teachers use Quill.org?",
              }
            }
            questionsAndAnswersFile="springboard"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  How should SpringBoard teachers use Quill.org?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="2"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    It is recommended that you and your students create free accounts on Quill.org. Creating an account will give you access to the two skills surveys and recommended practice; creating an account also allows you to track your students’ progress and view data reports. You can create an account by visiting the Quill 
                    <a
                      href="https://www.quill.org/sign-up/teacher"
                    >
                      sign-up page
                    </a>
                    .
                  </p>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Please note that if you do not create an account, you will not be able to use the skills surveys, access the recommended skills practice, track student progress, or view data reports.
                  </p>
                </div>,
                "question": "Do I need to create an account on Quill.org?",
              }
            }
            questionsAndAnswersFile="springboard"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  Do I need to create an account on Quill.org?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="3"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    The skills surveys function similarly to the Quill Diagnostic tool. The activities linked throughout the English 1 lessons and the activities that are recommended based on the students’ skills survey results will be from the Quill Connect sentence combining tool. If you decide to create a free account on Quill.org, you will be able to assign additional activities from any of the five tools listed below.
                  </p>
                  <ul>
                    <li>
                      <p>
                        Quill Connect
                      </p>
                      <p
                        className="college-board-q-and-a-text"
                      >
                        Students combine multiple ideas into a single sentence using the evidence-based strategy of sentence combining. Students then receive instant feedback designed to help them improve the clarity and precision of their sentences while also reinforcing accurate usage and mechanics.
                      </p>
                    </li>
                    <li>
                      <p>
                        Quill Grammar
                      </p>
                      <p
                        className="college-board-q-and-a-text"
                      >
                        Students practice basic grammar skills, from using correct capitalization to recognizing and correcting commonly confused words.
                      </p>
                    </li>
                    <li>
                      <p>
                        Quill Proofreader
                      </p>
                      <p
                        className="college-board-q-and-a-text"
                      >
                        Students practice their editing skills by proofreading passages embedded with errors. Students receive personalized follow-up activities based on their results.
                      </p>
                    </li>
                    <li>
                      <p>
                        Quill Lessons
                      </p>
                      <p
                        className="college-board-q-and-a-text"
                      >
                        Teachers lead whole-class writing instruction with complete lesson plans and activities. Teachers control interactive slides that contain a mini lesson and guided practice. Teachers can model writing strategies in real-time, present prompts to which students can respond on their own devices, and then anonymously display student responses for discussion. Each Quill Lessons activity provides a lesson plan, writing prompts, discussion topics, and a follow-up independent practice activity. Teachers can also customize any lesson by adding their own prompts and examples.
                      </p>
                    </li>
                    <li>
                      <p>
                        Quill Diagnostic
                      </p>
                      <p
                        className="college-board-q-and-a-text"
                      >
                        Students complete an activity designed to help teachers quickly determine which skills students need to work on. After students complete a Quill Diagnostic activity, Quill recommends a set of writing activities for students based on their results. Teachers can easily view and assign the recommended sequence of activities and track their students’ progress. As mentioned above, the skills surveys have been developed as customized tools based on the Pre-AP English High School Course Framework. Therefore, the skills surveys can be used in lieu of the general Quill Diagnostic activities.
                      </p>
                    </li>
                  </ul>
                </div>,
                "question": "What tools does Quill.org offer?",
              }
            }
            questionsAndAnswersFile="springboard"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What tools does Quill.org offer?
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <QuestionAndAnswer
            key="4"
            qa={
              Object {
                "answer": <div>
                  <p
                    className="college-board-q-and-a-text"
                  >
                    Visit our teacher center for additional resources and more information about how to use Quill: 
                    <a
                      className="focus-on-light"
                      href="https://www.quill.org/teacher-center"
                    >
                      https://www.quill.org/teacher-center
                    </a>
                    . You can also reach out to either one of your Quill representatives via email. We're always happy to help!
                  </p>
                  <p
                    className="college-board-block"
                  >
                    Quill Representatives:
                  </p>
                  <div
                    className="college-board-block"
                  >
                    <p>
                      Christina Collins-Berry
                    </p>
                    <p>
                      Managing Director of Partnerships
                    </p>
                    <p>
                      christina@quill.org
                    </p>
                  </div>
                  <div
                    className="college-board-block"
                  >
                    <p>
                      Sherry Lewkowicz
                    </p>
                    <p>
                      Senior Instructional Coach
                    </p>
                    <p>
                      sherry@quill.org
                    </p>
                  </div>
                  <p
                    className="college-board-block"
                  >
                    Quill Support: support@quill.org (include your current Pre-AP teacher status in email)
                  </p>
                  <p
                    className="college-board-block"
                  >
                    Quill phone number: (510) 671-0222
                  </p>
                  <p
                    className="college-board-block"
                  >
                    Quill Support Chat: While you’re on Quill.org, you can use the chat bubble in the lower right side of your screen to connect with a member of the Quill support team. Be sure to mention that you’re a Pre-AP teacher when you reach out using this method.
                  </p>
                </div>,
                "question": "What if I have a question about Quill.org? ",
              }
            }
            questionsAndAnswersFile="springboard"
          >
            <div
              className="qa-section"
            >
              <div
                className="qa"
              >
                <button
                  className="question"
                  onClick={[Function]}
                  tabIndex={-1}
                  type="button"
                >
                  What if I have a question about Quill.org? 
                </button>
              </div>
              <div>
                <button
                  className="expand-collapse-button focus-on-light"
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  type="button"
                >
                  <img
                    alt="expand-and-collapse"
                    src="undefined/images/shared/expand.svg"
                  />
                </button>
              </div>
            </div>
          </QuestionAndAnswer>
          <a
            className="support-link hidden"
            href=""
          >
            View all questions and answers
          </a>
        </div>
      </div>
    </QuestionsAndAnswers>
  </div>
</SpringBoard>
`;
